# Hybrid-Chess-AI

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  arena.py  augmentation.py  batch_mcts.py  bindings.cpp  checkpoint.py  chess.cpp  chess.hpp  config.py  config.yaml  config.yml  data_structures.py  encoder.cpp  encoder.hpp  encoder.py  engine.py  environment.yml  experience_buffer.py  game.py  inference.py  main.py  mcts.cpp  mcts.hpp  mcts.py  model.py  move_encoder.py  move_utils.py  network.py  opening_book.json  opening_book.py  openings.txt  optimization.py  (+20 more)
.github/workflows/: ci.yml
benchmark_reports/: adjudication_schedule.csv  augmentation_backends.csv  augmentation_transforms.csv  chess_cpp.csv  cost_breakdown.csv  encoding_pipeline.csv  inference_batchsizes.csv  inference_devices.csv  inference_dtypes.csv  inference_suite.csv  mcts_cpp.csv  mcts_dirichlet.csv  mcts_scaling.csv  mcts_visit_pruning.csv  opening_book.csv  ranking_results.json  replay_buffer.csv  selfplay_workers.csv  system_bench.csv  train_step.csv
benchmark_reports/chess/: baseline_summary.json  baseline_summary.md
benchmark_reports/mcts/: baseline_summary.json  baseline_summary.md
checkpoints/: best_model.pt  checkpoint.pt
configs/: run1_baseline.yaml  run2_deep_thought.yaml  run3_rapid_fire.yaml  run4_high_exploration.yaml  run5_aggressive_updates.yaml  thesis_3070.yaml
core/: bindings.cpp  chess.cpp  chess.hpp  mcts.cpp  mcts.hpp  replay_buffer.cpp  replay_buffer.hpp
cpp/: CMakeLists.txt  bindings.cpp  chess.cpp  chess.hpp  encoder.cpp  encoder.hpp  mcts.cpp  mcts.hpp
docs/: architecture.md  benchmarks.md  setup.md  testing.md
hca/: __init__.py  config.py  evaluator.py  inference.py  model.py  nn.py  pipeline.py
hybridchess/: __init__.py  cli.py  config.py  config_colab.py  model.py  selfplay.py  trainer.py
logs/: 20250928_192537_promo_1.pgn  20250928_192537_promo_2.pgn  20250928_194013_promo_1.pgn  20250928_194013_promo_2.pgn  20250928_195409_promo_1.pgn  20250928_195409_promo_2.pgn  20250928_200816_promo_1.pgn  20250928_200816_promo_2.pgn  20250928_202229_promo_1.pgn  20250928_202229_promo_2.pgn  20250928_203702_promo_1.pgn  20250928_203702_promo_2.pgn  20250928_205107_promo_1.pgn  20250928_205107_promo_2.pgn  20250928_210557_promo_1.pgn  20250928_210557_promo_2.pgn  20250928_211952_promo_1.pgn  20250928_211952_promo_2.pgn  20250928_213326_promo_1.pgn  20250928_213326_promo_2.pgn  20250928_214730_promo_1.pgn  20250928_214730_promo_2.pgn  20250928_220149_promo_1.pgn  20250928_220149_promo_2.pgn  20250928_221654_promo_1.pgn  20250928_221654_promo_2.pgn  20250928_223055_promo_1.pgn  20250928_223055_promo_2.pgn  20250928_224416_promo_1.pgn  20250928_224416_promo_2.pgn  20250928_225734_promo_1.pgn  20250928_225734_promo_2.pgn  20250928_231042_promo_1.pgn  20250928_231042_promo_2.pgn  20250928_232430_promo_1.pgn  20250928_232430_promo_2.pgn  20250928_233814_promo_1.pgn  20250928_233814_promo_2.pgn  20250928_235131_promo_1.pgn  20250928_235131_promo_2.pgn  (+586 more)
python/: arena.py  augmentation.py  checkpoint.py  config.py  fen_tools.py  inference.py  metrics.py  network.py  optimization.py  reporting.py  self_play.py  train.py  train_loop.py  utils.py
python/pipeline/: __init__.py  settings.py
runs/20251014-200225/: run_info.json
runs/20251015-084649/: run_info.json
runs/20251018-183850/: run_info.json
runs/20251020-005108/: run_info.json
runs/20251125-124632/: run_info.json
runs/20251126-100221/: run_info.json
runs/20251126-205609/: run_info.json
runs/20251127-153749/: run_info.json
runs/20251128-101517/: run_info.json
scripts/: chess_engine.py  chess_utils.py  data_pipeline.py
src/: benchmark_worker.py  cnn.py  dashboard.py  data_preparation_worker.py  evaluation_worker.py  hyperparameter_optimization_worker.py  lichess_bot_deployment_worker.py  main.py  model.py  reinforcement_training_worker.py  style.py  styles.py  supervised_training_worker.py
src/analysis/: benchmark_subtab.py  benchmark_visualization.py  evaluation_subtab.py  evaluation_worker.py
src/base/: base_tab.py  base_trainer.py  base_visualization.py  base_worker.py
src/common/: base_tab.py  common_widgets.py  config.py
src/core/: bindings.cpp  chess.cpp  chess.hpp  mcts.cpp  mcts.hpp  replay_buffer.cpp
src/data/: data_pipeline.py  datasets.py
src/data_preparation/: data_preparation.py  data_preparation_subtab.py  data_preparation_tab.py  data_preparation_visualization.py  data_preparation_worker.py  opening_book_processor.py  opening_book_subtab.py  opening_book_visualization.py  opening_book_worker.py
src/data_preperation/: data_preparation_worker.py
src/evaluation/: benchmark_subtab.py  benchmark_worker.py  evaluate.py  evaluation.py  evaluation_subtab.py  evaluation_tab.py  evaluation_visualization.py  evaluation_worker.py
src/game/: game_engine.py  game_tab.py  game_visualization.py  opening_book.py
src/gui/: __init__.py  board_widget.py  data_preparation_tab.py  game_tab.py  (+5 more)
tests/: conftest.py  test_arena_helpers.py  test_augmentation.py  test_checkpoint.py  test_chesscore.py  test_config.py  test_encoder.py  test_inference.py  test_mcts_convergence.py  test_model.py  test_network_architecture.py  test_replay_buffer.py  test_self_play.py  test_train_loop.py  test_training_control.py  test_training_dynamics.py  test_utils.py  test_utils_device.py  test_utils_optimization.py
thesis/: build.bat  thesis.aux  thesis.lof  thesis.lot  thesis.tex  thesis.toc
tools/: _bench_common.py  benchmark_adj.py  benchmark_augmentation_backends.py  benchmark_augmentation_transforms.py  benchmark_chess.py  benchmark_chess_cpp.py  benchmark_encoding_pipeline.py  benchmark_inference_batchsizes.py  benchmark_inference_devices.py  benchmark_inference_dtypes.py  benchmark_mcts.py  benchmark_mcts_cpp.py  benchmark_mcts_dirichlet.py  benchmark_mcts_visit_pruning.py  benchmark_opening_book.py  benchmark_replay_buffer_io.py  benchmark_selfplay_workers.py  benchmark_train_step_overhead.py  benchmarks.py  generate_artifacts.py
(+5683 files in other folders)
